typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.ts.stderr
error: UndefinedSymbol {
    sym: Atom('A' type=inline),
    span: Span {
        lo: BytePos(
            19,
        ),
        hi: BytePos(
            20,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.ts:1:20
  |
1 | class C implements A extends B {
  |                    ^

error: TS1175
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.ts:1:22
  |
1 | class C implements A extends B {
  |                      ^^^^^^^

error: UndefinedSymbol {
    sym: Atom('B' type=inline),
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            30,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.ts:1:30
  |
1 | class C implements A extends B {
  |                              ^

